--- a/admin.html
+++ b/admin.html
@@ -21,14 +21,14 @@
                             
                                 <div class="date-selection-form">
                                     <div class="to-main-page-wrapper">
-                                        <a href="/index.html" class="to-main-page-a">Вернуться назад</a>
+                                        <a href="/index.html" class="to-main-page-a">Вернуться на главную</a>
                                     </div>
-                                    <div class="input-form-button-wrapper">
+                                    <div class="date-popup-button-wrapper">
                                         <button data-id="date-popup" class="date-popup-open-btn">Выбрать дату</button>
                                     </div>
                                 </div>
                                 <div class="box-list">
-                                    <div class="list-item">
+                                    <div class="list-item list-item--example">
                                         <div class="list-item-text number">Стол</div>
                                         <div class="list-item-text time">Время</div>
                                         <div class="list-item-text client">Имя</div>
@@ -44,7 +44,7 @@
                                     <div class="list-item">
                                         <div class="list-item-text number">№4</div>
                                         <div class="list-item-text time">19:00</div>
-                                        <div class="list-item-text client">Коларпвлрпвлоап</div>
+                                        <div class="list-item-text client">Коларп</div>
                                         <div class="list-item-text phone">+79272339292</div>
                                         <button class="list-item-btn list-item-btn__delete-btn admin-delete-popup-open-btn">Удалить</button>
                                     </div>
@@ -67,26 +67,6 @@
                     </div>
                 </div>
             </div>
-            <footer class="footer">
-                <div class="footer-container">
-                    <div class="contactsf">
-                        <p class="contacts-text">ул. Московская, 122/126</p>
-                        <p class="contacts-text">+7(838)323-43-22</p>
-                    </div>
-                    <div class="download">
-                        <p class="contacts-text">Скачайте приложение</p>
-                        <div class="apps">
-                            <a href="" class="item"><img src="https://cdn-icons-png.flaticon.com/128/104/104089.png" width="40px" height="40px" alt=""></a>
-                        <a href="" class="item"><img src="https://cdn-icons-png.flaticon.com/128/831/831378.png" width="40px" height="40px" alt=""></a>
-                        </div>
-                    </div>
-                    <div class="social">
-                        <a href="" class="item"><img src="https://cdn-icons-png.flaticon.com/128/2111/2111828.png" width="40px" height="40px" alt=""></a>
-                        <a href="" class="item"><img src="https://cdn-icons-png.flaticon.com/128/1384/1384031.png" width="40px" height="40px" alt=""></a>
-                        <a href="" class="item"><img src="https://cdn-icons-png.flaticon.com/128/1077/1077041.png" width="40px" height="40px" alt=""></a>
-                    </div>
-                </div>
-            </footer>
         </div>
     </div>   
 
