--- a/booking.html
+++ b/booking.html
@@ -136,18 +136,11 @@
             </div>
         
 
-            <div class="footer">
-                <div class="footer-container">
+            <footer class="footer">
+                <div class="footer-section">
                     <div class="contactsf">
                         <p class="contacts-text">ул. Московская, 122/126</p>
                         <p class="contacts-text">+7(838)323-43-22</p>
-                    </div>
-                    <div class="download">
-                        <p class="contacts-text">Скачайте приложение</p>
-                        <div class="apps">
-                            <a href="" class="item"><img src="https://cdn-icons-png.flaticon.com/128/104/104089.png" width="40px" height="40px" alt=""></a>
-                        <a href="" class="item"><img src="https://cdn-icons-png.flaticon.com/128/831/831378.png" width="40px" height="40px" alt=""></a>
-                        </div>
                     </div>
                     <div class="social">
                         <a href="" class="item"><img src="https://cdn-icons-png.flaticon.com/128/2111/2111828.png" width="40px" height="40px" alt=""></a>
@@ -155,7 +148,7 @@
                         <a href="" class="item"><img src="https://cdn-icons-png.flaticon.com/128/1077/1077041.png" width="40px" height="40px" alt=""></a>
                     </div>
                 </div>
-            </div>
+            </footer>
         </div>
     </div>
 
