--- a/index.html
+++ b/index.html
@@ -114,18 +114,17 @@
                         <div class="section__header section__header--photo-slider">
                             <h2 class="section__header-text section__header-text--photo-slider">Галерея</p>
                         </div>
-                        <div class="section-content section-content--photo-slider">
-                            <div class="section-content__slider-wrapper">
+                        <div class="section__content section__content--photo-slider">
+                            <div class="slider-wrapper">
                                 <button class="slider-button slider-prev"><img src="img/leftarrow.png" alt=""></button>
-                                    <div class="slider">
-                                        <div class="slider-line">
-                                            <img src="img/ef2f7da069bcbc7eab510bd2b5572334.jpg" alt="" height="550" width="900">
-                                            <img src="img/ef2f7da069bcbc7eab510bd2b5572334.jpg" alt="" height="550" width="900">
-                                            <img src="img/ef2f7da069bcbc7eab510bd2b5572334.jpg" alt="" height="550" width="900">
-                                            <img src="img/ef2f7da069bcbc7eab510bd2b5572334.jpg" alt="" height="550" width="900">
-                                        
-                                        </div>
+                                <div class="slider">
+                                    <div class="slider-line">
+                                        <img src="img/ef2f7da069bcbc7eab510bd2b5572334.jpg" alt="" height="550" width="900">
+                                        <img src="img/ef2f7da069bcbc7eab510bd2b5572334.jpg" alt="" height="550" width="900">
+                                        <img src="img/ef2f7da069bcbc7eab510bd2b5572334.jpg" alt="" height="550" width="900">
+                                        <img src="img/ef2f7da069bcbc7eab510bd2b5572334.jpg" alt="" height="550" width="900">
                                     </div>
+                                </div>
                                 <button class="slider-button slider-next"><img src="img/rightarrow.png.png" alt=""></button>
                             </div>
                         </div>
@@ -153,17 +152,10 @@
             </div>
     
             <footer class="footer">
-                <div class="footer-container">
+                <div class="footer-section">
                     <div class="contactsf">
                         <p class="contacts-text">ул. Московская, 122/126</p>
                         <p class="contacts-text">+7(838)323-43-22</p>
-                    </div>
-                    <div class="download">
-                        <p class="contacts-text">Скачайте приложение</p>
-                        <div class="apps">
-                            <a href="" class="item"><img src="https://cdn-icons-png.flaticon.com/128/104/104089.png" width="40px" height="40px" alt=""></a>
-                        <a href="" class="item"><img src="https://cdn-icons-png.flaticon.com/128/831/831378.png" width="40px" height="40px" alt=""></a>
-                        </div>
                     </div>
                     <div class="social">
                         <a href="" class="item"><img src="https://cdn-icons-png.flaticon.com/128/2111/2111828.png" width="40px" height="40px" alt=""></a>
